@startuml

skinparam classAttributeIconSize 0

class FootballChampionship {

    - {static} logger : Logger
    - {static} FILE_READ : String
    - {static} FILE_WRITE : String
    - {static} FILE_ENCODING : String

    + {static} main(args : String)
}

class FootballTeam {

    - name : String
    - numGame : Integer
    - points : Integer

    + FootballTeam(name : String, numGame : Integer, points : Integer)
    + getName() : String
    + getNumGame() : Integer
    + getPoints() : Integer
    + compareTo(o : FootballTeam) : Integer
}

class StringToFootballTeamConverter {

    + {static} stringToFootballTeamConverter(str : String) : FootballTeam
}

class FileFun {

    + {static} readFile(nameFile : String, encoding : String) : ArrayList<FootballTeam>
    + {static} writeFile(nameFile : String, flag : Boolean, data : ArrayList<FootballTeam>)
}

FootballChampionship .> FootballTeam
FootballChampionship ..> FileFun
FileFun .> StringToFootballTeamConverter
FileFun ..> FootballTeam
StringToFootballTeamConverter .> FootballTeam
@enduml